--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <!-- ======= marquee Section ======= -->
       <marquee width="95%" direction="left" height="50px" style="font-weight: bold;color: red;">
-       NO SPOT REGISTRATION AVAILABLE
+       NO SPOT REGISTRATION AVAILABLE & TODAY at 8:00 p.m., WE WILL BE CLOSING REGISTRATION.
         </marquee>
 
       <div class="container-md" data-aos="fade-in">
