--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
           <li><a href="category.html">Events</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="https://forms.gle/DHCy5vNsAALiJehn6" target="_blank"><button class="reg1" > Register</button></a></li>
+          <li><a href="" target=""><button class="reg1">Register Closed</button></a></li>
         </ul>
       </nav><!-- .navbar -->
     
