--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a href="category.html">Events</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="https://forms.gle/DHCy5vNsAALiJehn6" target="_blank"><button class="reg1">Register</button></a></li>
+          <li><a href="" target=""><button class="reg1">Register Closed</button></a></li>
         </ul>
       </nav><!-- .navbar -->
     
@@ -83,7 +83,7 @@
 
       <!-- ======= marquee Section ======= -->
       <marquee width="95%" direction="left" height="50px" style="font-weight: bold;color: red;">
-       NO SPOT REGISTRATION AVAILABLE & TODAY at 8:00 p.m., WE WILL BE CLOSING REGISTRATION.
+       NO SPOT REGISTRATION AVAILABLE & REGISTRATION CLOSED.
         </marquee>
 
       <div class="container-md" data-aos="fade-in">
@@ -151,7 +151,7 @@
 
     <div class="mi">
 
-        <a href="https://forms.gle/DHCy5vNsAALiJehn6"class=" mobile-nav-toggle1 js-search-close " target="_blank" ><button class="reg2">Register</button></a>
+        <a href=""class=" mobile-nav-toggle1 js-search-close " target="" ><button class="reg2">Register Closed</button></a>
   </div>
 
   <!-- ======= workshop Category Section ======= -->
